--- a/index.html
+++ b/index.html
@@ -2,87 +2,57 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Toko Online Sederhana</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maintenance</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f5f5f5;
+      background-color: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      font-family: Arial, sans-serif;
     }
-    header {
-      background-color: #28a745;
-      color: white;
+
+    .marquee-container {
+      background-color: #ffeeba;
       padding: 20px;
-      text-align: center;
-    }
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-    .product {
-      background: white;
-      padding: 15px;
+      border: 2px solid #f0ad4e;
       border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      text-align: center;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    .product img {
-      max-width: 100%;
-      border-radius: 8px;
+
+    .marquee {
+      white-space: nowrap;
+      overflow: hidden;
+      position: relative;
     }
-    .product h3 {
-      margin: 10px 0;
-    }
-    .product p {
-      color: #555;
-    }
-    .wa-button {
+
+    .marquee span {
       display: inline-block;
-      margin-top: 10px;
-      background-color: #25D366;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
+      padding-left: 100%;
+      animation: scroll-text 10s linear infinite;
+      font-size: 20px;
+      color: #856404;
     }
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      margin-top: 30px;
+
+    @keyframes scroll-text {
+      0% {
+        transform: translateX(0%);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
     }
   </style>
 </head>
 <body>
-
-<header>
-  <h1>SukiStore</h1>
-  <p>Selamat datang! Distore kami</p>
-</header>
-
-<div class="container">
-  <div class="product">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8nNZSjEbvLnAGzAdgh6KFen5_sYkFdyQBnw&s" alt="Cpvp Setup">
-    <h3>Cpvp Setup</h3>
-    <p>Rp8.000</p>
-    <a class="wa-button" href="https://wa.me/6282182572850?text=Halo%20saya%20mau%20beli%20Cpvp" target="_blank">Beli via WhatsApp</a>
+  <div class="marquee-container">
+    <div class="marquee">
+      <span>Website sedang maintenance (admin sukistore lagi benerin)</span>
+    </div>
   </div>
-
-  <div class="product">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAqX2bk7om1af4eqA096EcXEG6roF0PvnBuQ&usqp=CAU" alt="PvP Setup">
-    <h3>PvP Setup</h3>
-    <p>Rp4.000</p>
-    <a class="wa-button" href="https://wa.me/6282182572850?text=Halo%20saya%20mau%20beli%20PvP" target="_blank">Beli via WhatsApp</a>
-  </div>
-
-  <!-- Tambah produk lainnya di sini -->
-<div>
-
 </body>
 </html>
