--- a/contact.html
+++ b/contact.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Hubungi Kami</title>
-  <link rel="stylesheet" href="../website1/style.css" />
+  <title>Toko Kami</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h2>Hubungi Toko</h2>
-    <form>
-      <input type="text" placeholder="Nama Anda" required />
-      <input type="email" placeholder="Email Anda" required />
-      <textarea placeholder="Pesan Anda" rows="4" required></textarea>
-      <button type="submit">Kirim</button>
-    </form>
+    <h2>Selamat Datang di Toko Kami</h2>
+    <div>
+      <p>Produk 1 - Rp10.000</p>
+      <p>Produk 2 - Rp20.000</p>
+      <p>Produk 3 - Rp30.000</p>
+    </div>
+    <a href="contact.html"><button>Hubungi Kami</button></a>
   </div>
 </body>
 </html>
