Update and rename contact.html to store.html

--- a/store.html
+++ b/store.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Toko Kami</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../website1/style.css" />
 </head>
 <body>
   <div class="container">
@@ -13,7 +13,7 @@
       <p>Produk 2 - Rp20.000</p>
       <p>Produk 3 - Rp30.000</p>
     </div>
-    <a href="contact.html"><button>Hubungi Kami</button></a>
+    <a href="store.html"><button>Hubungi Kami</button></a>
   </div>
 </body>
 </html>
