--- a/store.html
+++ b/store.html
@@ -2,18 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Toko Kami</title>
-  <link rel="stylesheet" href="../website1/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Store</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h2>Selamat Datang di Toko Kami</h2>
-    <div>
-      <p>Produk 1 - Rp10.000</p>
-      <p>Produk 2 - Rp20.000</p>
-      <p>Produk 3 - Rp30.000</p>
+  <div class="store-container">
+    <div class="product">
+      <img src="https://via.placeholder.com/250x150?text=Produk+1" alt="Produk 1" />
+      <h3>Produk 1</h3>
+      <p>Deskripsi produk 1</p>
+      <button class="whatsapp-btn" onclick="openWhatsApp()">Chat via WhatsApp</button>
     </div>
-    <a href="store.html"><button>Hubungi Kami</button></a>
+    <div class="product">
+      <img src="https://via.placeholder.com/250x150?text=Produk+2" alt="Produk 2" />
+      <h3>Produk 2</h3>
+      <p>Deskripsi produk 2</p>
+      <button class="whatsapp-btn" onclick="openWhatsApp()">Chat via WhatsApp</button>
+    </div>
+    <div class="product">
+      <img src="https://via.placeholder.com/250x150?text=Produk+3" alt="Produk 3" />
+      <h3>Produk 3</h3>
+      <p>Deskripsi produk 3</p>
+      <button class="whatsapp-btn" onclick="openWhatsApp()">Chat via WhatsApp</button>
+    </div>
   </div>
+
+  <script>
+    function openWhatsApp() {
+      const phone = '082182572850';
+      // Format nomor pakai kode negara (contoh +62 untuk Indonesia)
+      const waNumber = '+6282182572850';
+      const url = `https://wa.me/${waNumber.replace(/\D/g,'')}`;
+      window.open(url, '_blank');
+    }
+
+    // Cek login, jika belum login redirect ke login
+    if (!localStorage.getItem('loggedInUser')) {
+      alert('Silakan login dulu!');
+      window.location.href = 'index.html';
+    }
+  </script>
 </body>
 </html>
