--- a/store.html
+++ b/store.html
@@ -69,21 +69,21 @@
   <div class="store-container">
     <div class="product">
       <img src="https://via.placeholder.com/250x150?text=Produk+1" alt="Produk 1" />
-      <h3>Produk 1</h3>
-      <p>Deskripsi produk 1</p>
+      <h3>Sticker Custom</h3>
+      <p>Harga 10k</p>
       <button class="whatsapp-btn" onclick="openWhatsApp()">Chat via WhatsApp</button>
     </div>
     <div class="product">
       <img src="https://via.placeholder.com/250x150?text=Produk+2" alt="Produk 2" />
-      <h3>Produk 2</h3>
-      <p>Deskripsi produk 2</p>
+      <h3>Bendera Custom</h3>
+      <p>Harga 34k</p>
       <button class="whatsapp-btn" onclick="openWhatsApp()">Chat via WhatsApp</button>
     </div>
     <div class="product">
       <img src="https://via.placeholder.com/250x150?text=Produk+3" alt="Produk 3" />
-      <h3>Produk 3</h3>
-      <p>Deskripsi produk 3</p>
-      <button class="whatsapp-btn" onclick="openWhatsApp()">Chat via WhatsApp</button>
+      <h3>Maintance</h3>
+      <p>Maintance</p>
+      <button class="whatsapp-btn" onclick="openWhatsApp()"></button>
     </div>
   </div>
 
