--- a/store.html
+++ b/store.html
@@ -68,19 +68,19 @@
 
   <div class="store-container">
     <div class="product">
-      <img src="https://via.placeholder.com/250x150?text=Produk+1" alt="Produk 1" />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRB5gxyL6DBAHXjY7VwhUdb3CydPtz6KJQuew&s" alt="Produk 1" />
       <h3>Sticker Custom</h3>
       <p>Harga 10k</p>
       <button class="whatsapp-btn" onclick="openWhatsApp()">Chat via WhatsApp</button>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/250x150?text=Produk+2" alt="Produk 2" />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRB5gxyL6DBAHXjY7VwhUdb3CydPtz6KJQuew&s" alt="Produk 2" />
       <h3>Bendera Custom</h3>
       <p>Harga 34k</p>
       <button class="whatsapp-btn" onclick="openWhatsApp()">Chat via WhatsApp</button>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/250x150?text=Produk+3" alt="Produk 3" />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRB5gxyL6DBAHXjY7VwhUdb3CydPtz6KJQuew&s" alt="Produk 3" />
       <h3>Maintance</h3>
       <p>Maintance</p>
       <button class="whatsapp-btn" onclick="openWhatsApp()"></button>
