--- a/store.html
+++ b/store.html
@@ -83,7 +83,7 @@
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRB5gxyL6DBAHXjY7VwhUdb3CydPtz6KJQuew&s" alt="Produk 3" />
       <h3>Maintance</h3>
       <p>Maintance</p>
-      <button class="whatsapp-btn" onclick="openWhatsApp()"></button>
+      <button class="pp-btn" onclick="pp()"></button>
     </div>
   </div>
 
