--- a/sukistore.html
+++ b/sukistore.html
@@ -73,9 +73,8 @@
 
   <header>
     <h1>SukiStore</h1>
-    <p>Tempat trade & beli item Minecraft dengan harga terjangkau dan layanan stuck net!</p>
+    <p>Tempat trade Minecraft dengan harga terjangkau dan layanan stuck/biji</p>
     <div class="btn-group">
-      <a href="https://wa.me/6282182572850?text=Bg%20beli%201%20net%202s%20Nama%20MC%3A" class="btn">Beli 1 Net 2s</a>
       <a href="https://wa.me/6282182572850?text=Halo%20admin%2C%20saya%20mau%20tanya%20tentang%20item%20lainnya%20di%20SukiStore" class="btn">Hubungi Admin</a>
     </div>
   </header>
