--- a/sukistore.html
+++ b/sukistore.html
@@ -73,7 +73,7 @@
 
   <header>
     <h1>SukiStore</h1>
-    <p>Tempat trade Minecraft dengan harga terjangkau dan layanan stuck/biji</p>
+    <p>Tempat trade Minecraft dengan harga terjangkau dan layanan stuck/biji. Hanya di "PurgeHC"</p>
     <div class="btn-group">
       <a href="https://wa.me/6282182572850?text=Halo%20admin%2C%20saya%20mau%20tanya%20tentang%20item%20lainnya%20di%20SukiStore" class="btn">Hubungi Admin</a>
     </div>
