--- a/index.html
+++ b/index.html
@@ -97,25 +97,30 @@
 
     <div class="card">
       <h2>Diamond & Emeralds</h2>
-      <div class="price-item">1 DNAME: 10 Blui</div>
-      <div class="price-item">2 DNAME: 20 Blui</div>
-      <div class="price-item">3 DNAME: 30 Blui</div>
-      <div class="price-item">4 DNAME: 35 Blui</div>
-      <div class="price-item">5 DNAME: 40 Blui</div>
+      <div class="price-item">1 DNAME: 10 Biji</div>
+      <div class="price-item">2 DNAME: 20 Biji</div>
+      <div class="price-item">3 DNAME: 30 Biji</div>
+      <div class="price-item">4 DNAME: 35 Biji</div>
+      <div class="price-item">5 DNAME: 40 Biji</div>
     </div>
 
     <div class="card">
       <h2>Iron & Gold</h2>
-      <div class="price-item">1 Gold/Iron: 8 Blui</div>
-      <div class="price-item">2 Gold/Iron: 11 Blui</div>
-      <div class="price-item">3 Gold/Iron: 14 Blui</div>
-      <div class="price-item">4 Gold/Iron: 21 Blui</div>
-      <div class="price-item">5 Gold/Iron: 28 Blui</div>
+      <div class="price-item">1 Gold/Iron: 8 Biji</div>
+      <div class="price-item">2 Gold/Iron: 11 Biji</div>
+      <div class="price-item">3 Gold/Iron: 14 Biji</div>
+      <div class="price-item">4 Gold/Iron: 21 Biji</div>
+      <div class="price-item">5 Gold/Iron: 28 Biji</div>
     </div>
 
     <div class="card">
       <h2>Info Tambahan</h2>
-      <p>Selain pilihan di atas, masih banyak lagi item lain yang dijual. Hanya barang berkualitas, mentok sampai 5 item saja per pembelian.</p>
+      <p>Selain pilihan di atas, masih banyak lagi item lain yang dijual. Hanya barang berkualitas, mentok sampai 5 item saja per pembelian. ⚔️ Purge HC Dimulai — Siapa yang Bertahan, Dialah Raja! ⚔️
+Trade item hanya dengan Netherite, Diamond, Emerald, Iron, dan Gold!
+No barang OP. Cuma lo, gear lo, dan skill lo.
+🔥 Main fair. Main keras.
+Kunjungi www.sukistore.me sekarang buat persiapan trade sebelum chaos dimulai!
+Lo siap? Atau cuma jadi korban berikutnya?</p>
     </div>
   </section>
 
