--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 
     <div class="card">
       <h2>Info Tambahan</h2>
-      <p>Selain pilihan di atas, masih banyak lagi item lain yang dijual. Hanya barang berkualitas, mentok sampai 5 item saja per pembelian. ⚔️ Purge HC Dimulai — Siapa yang Bertahan, Dialah Raja! ⚔️
+      <p>Selain pilihan di atas, masih banyak lagi item lain yang dijual. Hanya barang berkualitas, mentok sampai 5 item saja per pembelian.
+        ⚔️ Purge HC Dimulai — Siapa yang Bertahan, Dialah Raja! ⚔️
 Trade item hanya dengan Netherite, Diamond, Emerald, Iron, dan Gold!
 No barang OP. Cuma lo, gear lo, dan skill lo.
 🔥 Main fair. Main keras.
